--- a/pai-cw1/index.html
+++ b/pai-cw1/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-	<div id="container" class="container">
+	<section id="container" class="container">
 
 		<header>
 			<div class="logo">
@@ -64,35 +64,31 @@
 				</form>
 			</div>
 
-			<div class="content" id="content">
+			<section class="content" id="content">
 
 				<div class="article-row">
 					<article>
-						<div class="article-content">
+						<aside class="article-content">
 							<div class="article-text">
 								<h1>Nagłówek</h1>
 								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto minima, fuga
-									dolore
-									obcaecati
-									ad dolores?</p>
+									dolore obcaecati ad dolores?</p>
 							</div>
 							<img src="article-placeholder.png" alt="Article photo" />
-						</div>
+						</aside>
 						<button>Przycisk</button>
 
 					</article>
 
 					<article>
-						<div class="article-content">
+						<aside class="article-content">
 							<div class="article-text">
 								<h1>Nagłówek</h1>
 								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto minima, fuga
-									dolore
-									obcaecati
-									ad dolores?</p>
+									dolore obcaecati ad dolores?</p>
 							</div>
 							<img src="article-placeholder.png" alt="Article photo" />
-						</div>
+						</aside>
 						<button>Przycisk</button>
 
 					</article>
@@ -100,54 +96,50 @@
 				</div>
 
 				<div class="article-row">
+
 					<article>
-						<div class="article-content">
+						<aside class="article-content">
 							<div class="article-text">
 								<h1>Nagłówek</h1>
 								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto minima, fuga
-									dolore
-									obcaecati
-									ad dolores?</p>
+									dolore obcaecati ad dolores?</p>
 							</div>
 							<img src="article-placeholder.png" alt="Article photo" />
-						</div>
+						</aside>
 						<button>Przycisk</button>
 
 					</article>
 
 					<article>
-						<div class="article-content">
+						<aside class="article-content">
 							<div class="article-text">
 								<h1>Nagłówek</h1>
 								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto minima, fuga
-									dolore
-									obcaecati
-									ad dolores?</p>
+									dolore obcaecati ad dolores?</p>
 							</div>
 							<img src="article-placeholder.png" alt="Article photo" />
-						</div>
+						</aside>
 						<button>Przycisk</button>
 
 					</article>
+
 
 				</div>
 
 
 
 
-			</div>
+			</section>
 
 
 		</main>
 
 
-
-
-
-		<div id="footer">
+		<footer>
 			Lorem ipsum dolor sit amet. &copy; Wszelkie prawa zastrzeżone
-		</div>
 
-	</div>
+		</footer>
+
+	</section>
 
 </body>
