Wersja z mniejszą liczbą div

--- a/pai-cw1/index.html
+++ b/pai-cw1/index.html
@@ -66,68 +66,101 @@
 
 			<section class="content" id="content">
 
-				<div class="article-row">
-					<article>
-						<aside class="article-content">
-							<div class="article-text">
-								<h2>Nagłówek</h2>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto minima, fuga
-									dolore obcaecati ad dolores?</p>
-							</div>
-							<img src="article-placeholder.png" alt="Article photo" />
-						</aside>
-						<button>Przycisk</button>
 
-					</article>
 
-					<article>
-						<aside class="article-content">
-							<div class="article-text">
-								<h2>Nagłówek</h2>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto minima, fuga
-									dolore obcaecati ad dolores?</p>
-							</div>
-							<img src="article-placeholder.png" alt="Article photo" />
-						</aside>
-						<button>Przycisk</button>
-
-					</article>
-
-				</div>
 
 				<div class="article-row">
 
 					<article>
-						<aside class="article-content">
-							<div class="article-text">
-								<h2>Nagłówek</h2>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto minima, fuga
-									dolore obcaecati ad dolores?</p>
-							</div>
-							<img src="article-placeholder.png" alt="Article photo" />
-						</aside>
-						<button>Przycisk</button>
+						<header>
+							<h2>Naglówek</h2>
+						</header>
+						<main class="article-content">
 
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto minima, fuga dolore
+								obcaecati ad dolores?
+							</p>
+
+							<img src="article-placeholder.png" alt="Article photo" />
+
+
+						</main>
+
+						<footer class="article-footer">
+							<button>Przycisk</button>
+						</footer>
 					</article>
+
+
 
 					<article>
-						<aside class="article-content">
-							<div class="article-text">
-								<h2>Nagłówek</h2>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto minima, fuga
-									dolore obcaecati ad dolores?</p>
-							</div>
+						<header>
+							<h2>Naglówek</h2>
+						</header>
+						<main class="article-content">
+
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto minima, fuga dolore
+								obcaecati ad dolores?
+							</p>
+
 							<img src="article-placeholder.png" alt="Article photo" />
-						</aside>
-						<button>Przycisk</button>
 
+
+						</main>
+
+						<footer class="article-footer">
+							<button>Przycisk</button>
+						</footer>
 					</article>
-
 
 				</div>
 
 
 
+				<div class="article-row">
+
+					<article>
+						<header>
+							<h2>Naglówek</h2>
+						</header>
+						<main class="article-content">
+
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto minima, fuga dolore
+								obcaecati ad dolores?
+							</p>
+
+							<img src="article-placeholder.png" alt="Article photo" />
+
+
+						</main>
+
+						<footer class="article-footer">
+							<button>Przycisk</button>
+						</footer>
+					</article>
+
+
+					<article>
+						<header>
+							<h2>Naglówek</h2>
+						</header>
+						<main class="article-content">
+
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto minima, fuga dolore
+								obcaecati ad dolores?
+							</p>
+
+							<img src="article-placeholder.png" alt="Article photo" />
+
+
+						</main>
+
+						<footer class="article-footer">
+							<button>Przycisk</button>
+						</footer>
+					</article>
+
+				</div>
 
 			</section>
 
@@ -135,7 +168,10 @@
 		</main>
 
 
-		<footer>
+
+
+
+		<footer class="main-footer">
 			Lorem ipsum dolor sit amet. &copy; Wszelkie prawa zastrzeżone
 
 		</footer>
